--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,5 @@ POSTGRES_PASSWORD=your_db_password
 PGADMIN_DEFAULT_EMAIL=your_email
 PGADMIN_DEFAULT_PASSWORD=your_password
 JWT_TOKEN_KEY=your_token_key
+
+DJANGO_ALLOWED_HOSTS=
