--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,6 +14,8 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     expose:
       - "8000"
+    networks:
+      - app-network
     depends_on:
       - postgres-db
 
@@ -27,6 +29,8 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - postgres:/var/lib/postgresql/data/
+    networks:
+      - app-network
 
   # Service pour l'application Vue.js (front-end)
   client:
@@ -34,8 +38,10 @@ services:
       context: ../prezent-vue  # Chemin vers le Dockerfile.prod du front-end Vue.js
       dockerfile: Dockerfile.prod
     container_name: client
-    expose:
-      - "80"
+    ports:
+      - "8080:80"  # Mappe le port externe 8080 au port interne 80 du conteneur
+    networks:
+      - app-network
 
   # Service pour Nginx
   nginx:
@@ -53,3 +59,7 @@ services:
 
 volumes:
   postgres:
+
+networks:
+  app-network:
+    driver: bridge
