--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
         server_name 1-prezent.com www.1-prezent.com;
 
         location / {
-            proxy_pass http://frontend;
+            proxy_pass http://frontend;  # Redirection vers le front-end Vue.js
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -32,7 +32,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://backend;
+            proxy_pass http://backend;  # Redirection vers le back-end Django
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
